fix nav on firefox

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,4 +1,5 @@
 .nav {
+    position: relative;
     text-align: center;
     width: 100%;
     top: 0;
